add cdh4 configuration file examples